# learn_claude_code

./: .env.example  .gitignore  PROJECT_ANALYSIS.md  README.md  package-lock.json  package.json  pyproject.toml
chapters/s01_agent_loop/: README.md  code.py  notes.md
chapters/s02_tool_use/: README.md  code.py  notes.md
chapters/s03_permission/: README.md  code.py  notes.md
chapters/s04_hooks/: README.md  code.py  hook.py  main.py  notes.md  tool.py
chapters/s05_todo_write/: README.md  code.py  notes.md
chapters/s06_subagent/: README.md  code.py  hook.py  main.py  notes.md  subagent.py  tool.py
chapters/s07_skill_loading/: README.md  code.py  main.py  notes.md  subagent.py  tool.py
chapters/s08_context_compact/: README.md  code.py  main.py  notes.md  skill.py  subagent.py  tool.py
chapters/s09_memory/: README.md  code.py  main.py  memory_func.py  notes.md
chapters/s10_system_prompt/: README.md  code.py  frontmatter.py  hook.py  main.py  memory_store.py  messages.py  notes.md  skill.py  subagent.py  system_prompt.py
chapters/s11_error_recovery/: README.md  agent.py  code.py  context_compact.py  error_recovery.py  memory.py  notes.md  tool.py
chapters/s12_task_system/: README.md  code.py  notes.md
chapters/s13_background_tasks/: README.md  code.py  notes.md
chapters/s14_cron_scheduler/: README.md  code.py  notes.md
examples/: basic_chat.py  local_qwen_smoke.py  tool_calling.py
memory/: project.md
prompts/: system.md  tool_guidelines.md
scripts/: run_chapter.py  smoke.py
skills/: README.md
tests/: test_config.py  test_tools.py
(+42 files in other folders)
